Text is no longer out of bounds

--- a/scss/_calculator.scss
+++ b/scss/_calculator.scss
@@ -56,11 +56,21 @@
   }
 
   &__expression {
+    display: flex;
+    justify-content: flex-end;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
     font-size: 55px;
     font-weight: 700;
   }
 
   &__result {
+    display: flex;
+    justify-content: flex-end;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
     font-size: 27px;
     margin-bottom: 10px;
   }
